--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,8 @@ html,body{
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+    font-size: 23px;
 }
-
 
 
 /*
@@ -19,76 +19,39 @@ body {
 
 
 /*
-顶部导航栏(左侧)
+顶部导航栏
 */
 .topNavi {
+    /* 弹性盒子 */
     display: flex;
     justify-content: space-between;
     /* 位置固定在顶部 */
     position: absolute;
     /* 填充宽度 高度*/
-    width: 100%;
+    width: 100VW;
     height: 3rem;
+    max-width:100%;
     /* 背景框毛玻璃效果 */
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     /* 背景框颜色 */
     background-color: rgb(144,168,225, 0.5);
+    /* 字体 */
+    font: 23px STXihei, "Microsoft YaHei";
 }
-.topLeft {
-    /* 左侧占比 */
-    flex: 1;
-    /* 横向排列 */
-    display: flex;
-    flex-direction: row;
-    /* 去除点 */
-    list-style: none;
-    /* 高度 */
-    height: 3rem;
-}
-.topLeft li {
-    height: 3rem;
-}
-/* Home键背景 */
-.topLeft li:first-child {
-    background: linear-gradient(rgb(114, 41, 214, 0.5), rgb(170, 70, 238, 0.6));  /* 背景色 */
-}
-/* Home键 属性 */
-.topLeft li:first-child a {
-    display: block;
-    padding: 0.65rem 0.7rem;   /* 文字 高度/宽度 */
-    color: #90E1A0;             /* 文字颜色 */
-    font: bold 24px STXihei, "Microsoft YaHei";
-    text-decoration: none;
-}
-.topRight {
-    /* 右侧占比 */
-    flex: 1;
-    /* 横向排列 */
-    float: right;
-    /* 去除点 */
-    list-style: none;
-    /* 高度 */
-    height: 3rem;
-    /* 右侧对齐 */
-    display: flex;
-    justify-content: flex-end;
-}
-.topRight li {
-    height: 3rem;
-}
-/* 其他按键 属性 */
+
+/* 按键 属性 */
 .topNavi a {
-    transition: all 400ms;
-    display: block;     /* 把链接显示为块元素可使整个链接区域可点击 */
-    padding: 0.65rem 0.5rem;   /* 文字 高度/宽度 */
-    color: #ecffa8;     /* 文字颜色 */
-    font: 22px STXihei, "Microsoft YaHei";
-    text-decoration-line: none;     /* 去除下划线 */
+    transition: all 400ms;      /* 动画速度 */
+    display: block;             /* 把链接显示为块元素 使整个链接区域可点击 */
+    text-align: center;
+    padding: 19px 0.5rem;
+
+    color: #ecffa8;             /* 文字颜色 */
+    text-decoration-line: none; /* 去除下划线 */
 }
-/* 其他按键 选中效果 */
-.topNavi a:hover:not(.home){
-    height: 1.7rem;
+/* 按键 选中效果 */
+.topNavi a:hover{
     /* 圆角 */
     border-radius: 30px;
     /* 背景变色 */
@@ -98,6 +61,50 @@ body {
     /* 动画时间 */
     transition: all 250ms;
 }
+
+.logo{
+    flex: 1;
+    background-image: url("../images/nook.png");
+    background-size: 5rem auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/*
+顶部导航栏 左
+*/
+.topLeft {
+    /* 左侧占比 */
+    flex: 10;
+
+    /* 横向排列 从左到右*/
+    display: flex;
+    flex-direction: row;
+
+    /* 去除li的点 */
+    list-style: none;
+
+    /* 高度 */
+    height: 3rem;
+}
+
+
+.topRight {
+    /* 右侧占比 */
+    flex: 1;
+
+    /* 去除点 */
+    list-style: none;
+    /* 高度 */
+    height: 3rem;
+    /* 右侧对齐 */
+    display: flex;
+    flex-direction: row-reverse;
+}
+.topRight li {
+    height: 3rem;
+}
+
 
 
 
@@ -270,7 +277,7 @@ body {
 */
 .skill {
     width: 100%;
-    height: 100VH;
+    height: 100%;
     margin: 0;
     background-color: rgb(248,244,244);     /* 背景色 */
 }
@@ -291,13 +298,35 @@ body {
 .chart table{
     width: 30%;
 }
-
+/* 柱状图 属性 */
 .chart .bar {
     --color: rgba(90,165,255,0.5);
     padding: 1rem 2rem;
     border-radius: 1rem;
-    background-color: rgb(199,199,199);
-    box-shadow: 2px 3px 3px RGB(144,144,144);
+    background: linear-gradient(to bottom right, rgb(246,246,246), 75%, rgb(211,211,211));
+    box-shadow:
+            inset -5px -5px 10px rgba(0, 0, 0, 0.5),
+            5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.chart caption {
+    font: bold 20px Tahoma,Helvetica,Arial,'宋体',sans-serif;
+}
+/*柱状图 标签属性*/
+.chart th {
+    font: 18px Tahoma,Helvetica,Arial,'宋体',sans-serif;
+}
+/* 柱状图 柱子属性 */
+.chart .bar td {
+    border-radius: 0.5rem;
+    box-shadow:
+            inset -5px -5px 10px rgba(0, 0, 0, 0.5),
+            5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.chart .pie td {
+    box-shadow:
+            inset -3px -3px 10px rgba(0, 0, 0, 0.3),
+            6px 6px 6px rgba(0, 0, 0, 0.2);
 }
 
 
