--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,7 @@ body {
     background-image: url("../images/nook.png");
     background-size: 3.5rem auto;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: 1.3rem center;
 }
 
 /*
