--- a/css/index.css
+++ b/css/index.css
@@ -28,37 +28,45 @@ body {
 
     /* 位置固定在顶部 */
     position: absolute;
+
     /* 填充宽度 高度*/
     width: 100VW;
     height: 2.5rem;
     max-width:100%;
+
     /* 背景框毛玻璃效果 */
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
     /* 背景框颜色 */
-    background-color: rgb(144,168,225, 0.5);
+
+    background-image: linear-gradient(110deg, rgb(242, 242, 242, 0.9) 0%, rgb(190, 190, 190, 0.9) 95%);
+
+
     /* 字体 */
-    font: 23px STXihei, "Microsoft YaHei";
+    font: 23px bold Arial, sans-serif;
 }
 
+/* Logo */
+.logo{
+    flex: 1;
+    background-image: url("../images/nook.png");
+    background-size: 4.5rem auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
 
-/* 按键 属性 */
+/* 文字 属性 */
 .topNavi a {
     transition: all 400ms;      /* 动画速度 */
-    padding: 13px 0.3rem;          /* 字体垂直居中 */     /* 字体垂直居中 */
-    color: #ecffa8;             /* 文字颜色 */
+    padding: 12px 0.8rem;       /* 文字 居中位置 间隔  */
+    color: rgb(74, 74, 74);  /* 文字颜色 */
     text-decoration-line: none; /* 去除下划线 */
 }
 
-.topNavi li {
-    padding: 13px 0;
-}
-
-.topLeft li:before {
-    content: "";
-    margin: 0.3rem;
-    border: 1px solid #d3d3d3;
-    align-self: center;
+#home {
+    color:rgb(106, 162, 189);
+    text-decoration: underline;
+    text-underline-position: under;
 }
 
 /* 按键 选中效果 */
@@ -66,62 +74,49 @@ body {
     /* 圆角 */
     border-radius: 20px;
     /* 背景变色 */
-    background-color: rgb(106, 136, 205);
-    /* 下划线 */
-    text-decoration: underline #ecffa8;
+    background-color: rgb(147, 167, 214);
+    /* 文字变色 */
+    color: rgb(255, 255, 255);
     /* 动画时间 */
     transition: all 250ms;
 }
 
-
-.logo{
-    flex: 1;
-    background-image: url("../images/nook.png");
-    background-size: 3.5rem auto;
-    background-repeat: no-repeat;
-    background-position: center center;
+/* 按键位置 */
+.topNavi li {
+    padding: 14px 0;
 }
 
-/*
-顶部导航栏 左
-*/
-.topLeft {
-    /* 左侧占比 */
-    flex: 10;
+/* 分隔线 */
+.topRight li:before {
+    content: "";
+    margin: 0.05rem;
+    border: 2px solid rgb(232, 232, 232, 0.4);
+    border-radius: 5px;
+    align-self: center;
+}
 
-    /* 横向排列 从左到右*/
-    display: flex;
-    flex-direction: row;
-
-    /* 去除li的点 */
-    list-style: none;
-
-    /* 高度 */
-    height: 3rem;
+.topRight li:last-child:before {
+    content: "";
+    border-style: none ;
+    align-self: center;
 }
 
 
+/* 右侧 */
 .topRight {
     /* 右侧占比 */
-    flex: 1;
-
-    /* 去除点 */
-    list-style: none;
-    /* 高度 */
-    height: 3rem;
-    /* 右侧对齐 */
+    flex: 3.5;
+    /* 横向排列 从右到左 */
     display: flex;
     flex-direction: row-reverse;
+    /* 去除点 */
+    list-style: none;
+    padding-right: 1rem;
 }
-.topRight li {
-    height: 3rem;
-}
-
-
 
 
 /*
-回到顶部
+回到顶部按钮
 */
 /* 位置 */
 #up {
@@ -149,13 +144,13 @@ body {
 书法名字
 */
 .name {
-    height: 85VH;
-    padding: 12VH;
+    height: 50VH;
+    padding: 50VH;
     text-align: center;
 }
 .name img {
     padding: 0;
-    height: 89.5VH;
+    width: 40vw;
     max-height: 100%;
 }
 
@@ -166,12 +161,15 @@ body {
 */
 /* 介绍 背景 */
 .intro {
-    height: 25VH;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 6rem;
     background-color: rgb(27, 33, 45);     /* 背景色 */
 }
 /* 介绍 标题 */
 .intro h2 {
-    padding-top: 1rem;  /* 离边框顶部高度 */
+  /* 离边框顶部高度 */
     width: 100%;    /* 宽度 */
     height: 2rem;   /* 高度 */
     text-align: center;     /* 居中 */
@@ -180,7 +178,7 @@ body {
 }
 /* 介绍 内容 */
 .intro p {
-    padding-top: 0.5rem;
+    padding-bottom: 0.3rem;
     width: 100%;
     text-align: center;
     font: 21px/1.0 STXihei, "Microsoft YaHei";
@@ -194,22 +192,27 @@ body {
 /* 介绍 背景 */
 .about {
     display: flex;
-    width: 100%;
-    height: 75VH;
-    margin: 0;
-    padding: 0;
+    max-width:100%;
+    width: 100vw;
+    height: 25rem;
     background-color: rgb(248,244,244);     /* 背景色 */
 }
 /* 介绍 左侧 */
 .aboutLeft {
     flex: 1;
+    display: flex;
+    flex-flow: column wrap;
+    align-content: flex-end;
+
+    padding-left: 5rem;
     margin-top: 1rem;  /* 离边框顶部距离 */
+
     width: 100%;
 }
 /* 信息栏 */
 .about ul {
-    width: 60%;      /* 总宽度 */
-    margin: 0 20%;   /* 两侧空白 */
+    width: 15rem;      /* 总宽度 */
+    padding-right: 3rem;
 }
 .about li {
     list-style: none;   /* 去除li的点 */
@@ -222,9 +225,12 @@ body {
 }
 /* 按钮栏 位置*/
 .btn {
-    margin: 1.5rem 25%;
+    margin-top: 1.5rem;
+    width: 15rem;      /* 总宽度 */
+    padding-right: 3rem;
     display: flex;
-    justify-content: space-between; /* 均匀排列 */
+    flex-direction: row;
+    justify-content: space-around; /* 均匀排列 */
 }
 /* 按钮栏 属性 */
 .btn button {
@@ -246,9 +252,8 @@ body {
 /* 介绍 右侧 */
 .about p {
     flex: 1.6;  /* Set left-right ratio in golden ratio 1:1.6 */
-    width: 100%;
-    margin-left: 0;
-    margin-right: 1rem;
+    padding-right: 10vw;
+    width: 10rem;
     margin-top: 2rem;
     text-align: left;   /* 左侧对齐 */
     font: 20px/1.5 Tahoma,Helvetica,Arial,'宋体',sans-serif;
