--- a/css/index.css
+++ b/css/index.css
@@ -38,9 +38,9 @@ body {
     backdrop-filter: blur(2px);
     -webkit-backdrop-filter: blur(2px);
     /* 背景框颜色 */
-
     background-image: linear-gradient(110deg, rgb(242, 242, 242, 0.9) 0%, rgb(190, 190, 190, 0.9) 95%);
-
+    /* 内嵌阴影 */
+    box-shadow: 0 -3px 6px rgb(194, 194, 194) inset;
 
     /* 字体 */
     font: 23px bold Arial, sans-serif;
@@ -63,10 +63,10 @@ body {
     text-decoration-line: none; /* 去除下划线 */
 }
 
-#home {
-    color:rgb(106, 162, 189);
-    text-decoration: underline;
-    text-underline-position: under;
+#contact {
+    color: rgb(74, 74, 74);
+    background-color: rgb(168, 168, 168);
+    border-radius: 10px;
 }
 
 /* 按键 选中效果 */
@@ -90,15 +90,13 @@ body {
 .topRight li:before {
     content: "";
     margin: 0.05rem;
-    border: 2px solid rgb(232, 232, 232, 0.4);
-    border-radius: 5px;
+    border: 1px solid rgb(232, 232, 232, 0.2);
+    border-radius: 7px;
     align-self: center;
 }
 
 .topRight li:last-child:before {
-    content: "";
     border-style: none ;
-    align-self: center;
 }
 
 
@@ -144,14 +142,14 @@ body {
 书法名字
 */
 .name {
-    height: 30VH;
-    padding: 50VH;
+    height: 80VH;
+    padding: 15VH;
     max-height: 100%;
     text-align: center;
 }
 .name img {
     padding: 0;
-    height: 30vh;
+    height: 80vh;
     max-height: 100%;
 }
 
@@ -191,12 +189,17 @@ body {
 个人介绍 About
 */
 /* 介绍 背景 */
+.about-section {
+    padding: 0 0rem 0 7rem;
+    background-color: rgb(248,244,244);     /* 背景色 */
+}
 .about {
     display: flex;
+    justify-content: space-between;
+
     max-width:100%;
     width: 100vw;
     height: 25rem;
-    background-color: rgb(248,244,244);     /* 背景色 */
 }
 /* 介绍 左侧 */
 .aboutLeft {
@@ -205,17 +208,16 @@ body {
     flex-flow: column wrap;
     align-content: flex-end;
 
-    padding-left: 5rem;
     margin-top: 1rem;  /* 离边框顶部距离 */
 
     width: 100%;
 }
 /* 信息栏 */
-.about ul {
+.aboutLeft ul {
     width: 15rem;      /* 总宽度 */
     padding-right: 3rem;
 }
-.about li {
+.aboutLeft li {
     list-style: none;   /* 去除li的点 */
     padding-top: 1rem;  /* 行距 */
     padding-bottom: 0.5rem; /* 下划线距离 */
@@ -251,23 +253,26 @@ body {
     transition: all 270ms;
 }
 /* 介绍 右侧 */
-.about p {
+.aboutRight {
     flex: 1.6;  /* Set left-right ratio in golden ratio 1:1.6 */
     padding-right: 10vw;
-    width: 10rem;
+
     margin-top: 2rem;
     text-align: left;   /* 左侧对齐 */
     font: 20px/1.5 Tahoma,Helvetica,Arial,'宋体',sans-serif;
     color: rgb(146,146,146);
-    overflow: hidden;
 }
+
+.aboutRight p {
+    max-width: 30rem;
+}
+
 /* slide in anime */
 .about-l-animation {
-    animation: slideL 1.3s 1;
+    animation: slideL 1s 1;
 }
-.about-p-animation {
-    /* 动画 */
-    animation: slideP 1.3s 1;
+.about-r-animation {
+    animation: slideP 1s 1;
 }
 @keyframes slideP {
     from {
@@ -289,6 +294,117 @@ body {
         opacity: 100%;
     }
 }
+
+
+/*
+教育经历
+*/
+.timeline-section {
+    background: linear-gradient(rgb(18, 18, 18), 93%, rgb(92, 90, 90), 98%, rgb(248,244,244));
+}
+
+/* 标题 */
+.timeline-section h2 {
+    color: white;
+    padding-top: 2rem;
+    letter-spacing: 1px;
+    margin-left: 3rem;
+    font: bold 28px STXihei, "Microsoft YaHei";    /* 字体 */
+}
+
+.timeline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    min-height: 100vh;
+    height: auto;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.timeline-content {
+    align-items: center;
+    justify-content: center;
+
+    background: rgb(25, 25, 25);
+    box-shadow: rgba(230, 230, 230, 0.6) 0px 10px 15px, rgba(230, 230, 230, 0.6) 0px 3px 3px;
+
+    border-radius: 5px;
+
+    padding: 1rem 1rem;
+    margin: 1rem 1rem 20px;
+
+    overflow-wrap: break-word !important;
+}
+
+.timeline-content .title {
+    color: white;
+    font: 28px bold Arial, sans-serif;
+}
+
+.timeline-content .time {
+    color: rgb(173, 173, 173);
+    font: 16px Arial sans-serif;
+    font-style: italic;
+}
+
+.timeline-content p {
+    color: rgb(214, 214, 214);
+    font: 18px Arial sans-serif;
+}
+
+.timeline-content p span {
+    color: rgb(237, 237, 237);
+    font: 22px Arial sans-serif;
+}
+
+.timeline-end {
+    align-items: center;
+    justify-content: center;
+
+    background: rgba(0, 0, 0, 0);
+    height: 250px;
+    overflow-wrap: break-word !important;
+}
+
+.timeline-end-middle {
+    position: relative;
+    background-image: linear-gradient(45deg, rgb(248,244,244), #E94057, #8A2387);
+    width: 3px;
+    height: 100%;
+}
+
+
+
+@media screen and (min-width: 768px) {
+    .timeline {
+        display: grid;
+        grid-template-columns: 1fr 3px 1fr;
+    }
+    .timeline-middle {
+        position: relative;
+        background-image: linear-gradient(45deg, #F27121, #E94057, #8A2387);
+        width: 3px;
+        height: 100%;
+    }
+    .main-middle {
+        opacity: 0;
+    }
+    .timeline-circle {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        background-image: linear-gradient(45deg, #F27121, #E94057, #8A2387);
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+}
+
 
 /*
 技能图表 Skill
@@ -346,6 +462,7 @@ body {
             inset -3px -3px 10px rgba(0, 0, 0, 0.3),
             6px 6px 6px rgba(0, 0, 0, 0.2);
 }
+
 
 
 .construction{
